--- a/source/sass/blocks/cloth-variants.scss
+++ b/source/sass/blocks/cloth-variants.scss
@@ -1,18 +1,31 @@
 .cloth-variants__content {
-  @include desktop-content;
-  margin: 0 auto;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    margin: 0 auto;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+  }
 }
 
 .cloth-variants__heading {
-  margin: 0;
-  margin-bottom: 44px;
-  padding-top: 80px;
+  @media (min-width: 760px) {
+    display: none;
+  }
 
-  font-size: 24px;
-  font-weight: normal;
-  line-height: 16px;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+  @media (min-width: 1170px) {
+    display: block;
+    margin: 0;
+    margin-bottom: 44px;
+    padding-top: 80px;
+
+    font-size: 24px;
+    font-weight: normal;
+    line-height: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
 }
 
 .cloth-variants__list {
@@ -20,36 +33,62 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
+  @media (min-width: 760px) {
+    padding-top: 16px;
+  }
+
+  @media (min-width: 1170px) {
+    padding-top: 0;
+  }
 }
 
 .cloth-variants__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 34px;
-  padding-top: 30px;
-  width: 360px;
-  background-color: #ffffff;
-  box-shadow: -3px 0 81px rgba(0, 0, 0, 0.1);
+  @media (min-width: 760px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 21px;
+    padding-top: 20px;
+    width: 240px;
+    background-color: #ffffff;
+    box-shadow: -3px 0 81px rgba(0, 0, 0, 0.1);
 
-  &:hover .cloth-variants__link,
-  &:focus-within .cloth-variants__link {
-    opacity: 1;
+    &:hover .cloth-variants__link,
+    &:focus-within .cloth-variants__link {
+      opacity: 1;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 34px;
+    padding-top: 30px;
+    width: 360px;
   }
 }
 
 .cloth-variants__item-heading {
-  margin: 0;
-  margin-bottom: 30px;
-  padding: 20px 36px;
-  border: 1px solid #3199c7;
-  border-top: none;
-  color: #3199c7;
-  font-size: 22px;
-  font-weight: normal;
-  line-height: 16px;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 20px;
+    padding: 16px 25px;
+    border: 1px solid #3199c7;
+    border-top: none;
+    color: #3199c7;
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 11px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 30px;
+    padding: 20px 36px;
+    font-size: 22px;
+    line-height: 16px;
+    letter-spacing: 0.5px;
+  }
 }
 
 .cloth-variants__image {
@@ -58,40 +97,67 @@
 }
 
 .cloth-variants__table {
-  margin-bottom: 15px;
-  width: 280px;
-  font-size: 18px;
-  line-height: 18px;
+  @media (min-width: 760px) {
+    margin-bottom: 10px;
+    width: 185px;
+    font-size: 12px;
+    line-height: 12px;
 
-  & tr {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 18px;
+    & tr {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 8px;
+    }
+
+    & td {
+      max-width: 88px;
+
+      &:last-child {
+        text-align: right;
+      }
+    }
   }
 
-  & td {
-    max-width: 135px;
+  @media (min-width: 1170px) {
+    margin-bottom: 15px;
+    width: 280px;
+    font-size: 18px;
+    line-height: 18px;
 
-    &:last-child {
-      text-align: right;
+    & tr {
+      margin-bottom: 18px;
+    }
+
+    & td {
+      max-width: 135px;
     }
   }
 }
 
 .cloth-variants__link {
-  box-sizing: border-box;
-  display: flex;
-  padding: 20px 48px;
-  width: 100%;
+  @media (min-width: 760px) {
+    box-sizing: border-box;
+    display: flex;
+    padding: 14px 33px;
+    width: 100%;
 
-  background-color: #f0f7fa;
-  border-top: 1px solid #3199c7;
-  opacity: 0;
+    background-color: #f0f7fa;
+    border-top: 1px solid #3199c7;
+    opacity: 0;
 
-  color: #3199c7;
-  font-size: 22px;
-  line-height: 22px;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 1.8px;
+    color: #3199c7;
+    font-size: 15px;
+    line-height: 15px;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1.8px;
+  }
+
+  @media (min-width: 1170px) {
+    padding: 20px 48px;
+
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: 1.8px;
+  }
 }
