--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: 760px) {
     @include tablet-content;
-    padding-top: 65px;
+    padding-top: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,6 +15,7 @@
   @media (min-width: 1170px) {
     @include desktop-content;
     @include bg-lines;
+    padding-top: 65px;
 
     &::after {
       content: '';
@@ -30,18 +31,24 @@
 }
 
 .advantages__heading {
-  position: relative;
-  margin: 0;
-  margin-bottom: 85px;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 23px;
-  color: #0a5a7e;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  @media (min-width: 760px) {
+    position: relative;
+    margin: 0;
+    margin-bottom: 70px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #0a5a7e;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+
 
 
   @media (min-width: 1170px) {
+    margin-bottom: 85px;
+    font-size: 24px;
+    line-height: 23px;
+
     &::before {
       content: "Меркурий-Интер-Лаб";
       position: absolute;
@@ -61,88 +68,156 @@
   @include list-reset;
   display: flex;
   @media (min-width: 760px) {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  @media (min-width: 1170px) {
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-start;
     flex-wrap: wrap;
   }
+
+  @media (min-width: 1170px) {
+
+  }
 }
 
 .advantages__card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 100px;
-  margin-bottom: 76px;
-  width: 425px;
-  min-height: 70px;
+  @media (min-width: 760px) {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 48px;
+    padding-left: 70px;
+    min-height: 60px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 75px;
-    height: 82px;
-    background-repeat: no-repeat;
-    background-position: center;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 54px;
+      height: 60px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    &:nth-child(1)::before {
+      background-image: url('../img/award-tablet.png');
+    }
+
+    &:nth-child(2)::before {
+      background-image: url('../img/order-tablet.png');
+    }
+
+    &:nth-child(3)::before {
+      background-image: url('../img/shield-tablet.png');
+    }
+
+    &:nth-child(4)::before {
+      background-image: url('../img/clock-tablet.png');
+    }
+
+    &:nth-child(5)::before {
+      background-image: url('../img/fashion-tablet.png');
+    }
+
+    &:nth-child(6)::before {
+      background-image: url('../img/truck-tablet.png');
+    }
   }
 
-  &:nth-child(1)::before {
-    background-image: url('../img/award.png');
-  }
+  @media (min-width: 1170px) {
+    margin-bottom: 76px;
+    padding-left: 100px;
+    width: 425px;
+    min-height: 70px;
 
-  &:nth-child(2)::before {
-    background-image: url('../img/order.png');
-  }
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 75px;
+      height: 82px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
 
-  &:nth-child(3)::before {
-    background-image: url('../img/shield.png');
-  }
+    &:nth-child(1)::before {
+      background-image: url('../img/award.png');
+    }
 
-  &:nth-child(4)::before {
-    background-image: url('../img/clock.png');
-  }
+    &:nth-child(2)::before {
+      background-image: url('../img/order.png');
+    }
 
-  &:nth-child(5)::before {
-    background-image: url('../img/fashion.png');
-  }
+    &:nth-child(3)::before {
+      background-image: url('../img/shield.png');
+    }
 
-  &:nth-child(6)::before {
-    background-image: url('../img/truck.png');
+    &:nth-child(4)::before {
+      background-image: url('../img/clock.png');
+    }
+
+    &:nth-child(5)::before {
+      background-image: url('../img/fashion.png');
+    }
+
+    &:nth-child(6)::before {
+      background-image: url('../img/truck.png');
+    }
   }
 }
 
 .advantages__card-heading {
-  margin: 0;
-  margin-bottom: 3px;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 23px;
-  color: #0a5a7e;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 3px;
+    width: 300px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 17px;
+    color: #0a5a7e;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 354px;
+    font-size: 20px;
+    line-height: 23px;
+  }
 }
 
 .advantages__card-description {
-  margin: 0;
-  width: 354px;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 19px;
+  @media (min-width: 760px) {
+    margin: 0;
+    width: 300px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 354px;
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
 
 .advantages__link {
-  margin-bottom: 39px;
-  width: 354px;
-  height: 52px;
-  font-size: 16px;
-  line-height: 23px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+
+  @media (min-width: 760px) {
+    margin-bottom: 39px;
+    width: 244px;
+    height: 38px;
+    font-size: 12px;
+    line-height: 18px;
+    text-transform: uppercase;
+    letter-spacing: 1.6px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 354px;
+    height: 52px;
+    font-size: 16px;
+    line-height: 23px;
+    letter-spacing: 2px;
+  }
 }
