--- a/source/sass/blocks/breadcrumbs.scss
+++ b/source/sass/blocks/breadcrumbs.scss
@@ -56,6 +56,11 @@
   }
 
   @media (min-width: 760px) {
+    font-size: 13px;
+    line-height: 13px;
+  }
+
+  @media (min-width: 1170px) {
     font-size: 16px;
     line-height: 16px;
   }
