--- a/source/sass/blocks/catalog-category.scss
+++ b/source/sass/blocks/catalog-category.scss
@@ -8,8 +8,8 @@
     margin: 0 auto;
     margin-bottom: 37px;
     padding-right: 15px;
-    padding-left: 40px;
-    width: 1140px;
+    padding-left: 27px;
+    width: 760px;
     background-color: #ffffff;
     box-shadow:
       3px 0 111px 0 rgba(0, 0, 0, 0.14);
@@ -18,80 +18,122 @@
   }
 
   @media (min-width: 1170px) {
+    padding-left: 40px;
+    width: 1140px;
   }
 }
 
 .catalog-category__heading {
-  margin: 0;
-  margin-bottom: 20px;
-  padding-top: 75px;
-  font-size: 41px;
-  line-height: 23px;
-  color: #0a5a7e;
-  text-transform: uppercase;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 14px;
+    padding-top: 50px;
+    font-size: 27px;
+    line-height: 15px;
+    color: #0a5a7e;
+    text-transform: uppercase;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 20px;
+    padding-top: 75px;
+    font-size: 41px;
+    line-height: 23px;
+  }
 }
 
 .catalog-category__description {
-  margin: 0;
-  margin-bottom: 64px;
-  width: 590px;
-  font-size: 18px;
-  line-height: 23px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 40px;
+    width: 392px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 64px;
+    width: 590px;
+    font-size: 18px;
+    line-height: 23px;
+  }
 }
 
 .catalog-category__image {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin-right: 40px;
-  width: 395px;
-  background-image: url("../img/catalog-category-bg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-
-  & img {
+  @media (min-width: 760px) {
     position: relative;
-    z-index: 1;
+    display: flex;
+    justify-content: center;
+    margin-right: 17px;
+    width: 264px;
+    background-image: url("../img/catalog-category-bg-tablet.png");
+    background-repeat: no-repeat;
+    background-position: center;
+
+    & img {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
   }
 
-  &::before {
-    box-sizing: border-box;
-    content: "";
-    position: absolute;
-    top: 40px;
-    left: 23px;
-    width: 90px;
-    height: 90px;
-    border: 21px solid #0a5a7e;
-    border-radius: 50%;
-  }
+  @media (min-width: 1170px) {
+    margin-right: 40px;
+    width: 395px;
+    background-image: url("../img/catalog-category-bg.png");
 
-  &::after {
-    box-sizing: border-box;
-    content: "";
-    position: absolute;
-    right: -140px;
-    bottom: -100px;
-    width: 300px;
-    height: 300px;
-    border: 69px solid #0a5a7e;
-    border-radius: 50%;
-    z-index: 0;
+    &::before {
+      box-sizing: border-box;
+      content: "";
+      position: absolute;
+      top: 40px;
+      left: 23px;
+      width: 90px;
+      height: 90px;
+      border: 21px solid #0a5a7e;
+      border-radius: 50%;
+    }
+
+    &::after {
+      box-sizing: border-box;
+      content: "";
+      position: absolute;
+      right: -140px;
+      bottom: -100px;
+      width: 300px;
+      height: 300px;
+      border: 69px solid #0a5a7e;
+      border-radius: 50%;
+      z-index: 0;
+    }
   }
 }
 
 .catalog-category__title {
-  position: absolute;
-  top: 70px;
-  width: 293px;
-  height: 56px;
-  text-shadow:
-    -3px 0 57px rgba(0, 0, 0, 0.51);
-  font-size: 80px;
-  font-weight: bold;
-  line-height: 45px;
-  color: #ffffff;
-  text-transform: uppercase;
-  letter-spacing: 0.82px;
-  z-index: 2;
+  @media (min-width: 760px) {
+    position: absolute;
+    top: 100px;
+    margin: 0;
+    width: 195px;
+    height: 30px;
+    text-shadow:
+      -3px 0 57px rgba(0, 0, 0, 0.51);
+    font-size: 54px;
+    font-weight: bold;
+    line-height: 30px;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.82px;
+    z-index: 2;
+  }
+
+  @media (min-width: 1170px) {
+    top: 145px;
+    width: 293px;
+    height: 56px;
+    font-size: 80px;
+    line-height: 45px;
+    letter-spacing: 0.82px;
+  }
 }
