--- a/source/sass/blocks/choose-cloth.scss
+++ b/source/sass/blocks/choose-cloth.scss
@@ -1,17 +1,34 @@
 .choose-cloth__breadcrumbs {
-  margin-bottom: 50px;
+  @media (min-width: 760px) {
+    margin-bottom: 27px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 50px;
+  }
 }
 
 .choose-cloth__heading {
-  @include desktop-content;
-  margin: 0 auto;
-  margin-bottom: 30px;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    margin: 0 auto;
+    margin-bottom: 24px;
 
-  font-size: 34px;
-  line-height: 34px;
-  color: #3199c7;
-  text-shadow:
-    20px 9px 0 rgba(49, 153, 199, 0.15);
-  text-transform: uppercase;
-  letter-spacing: 2px;
+    font-size: 24px;
+    line-height: 24px;
+    color: #3199c7;
+    text-shadow:
+      10px 6px 0 rgba(49, 153, 199, 0.15);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+    margin-bottom: 30px;
+
+    font-size: 34px;
+    line-height: 34px;
+    letter-spacing: 2px;
+  }
 }
