--- a/source/sass/blocks/cloth-selection.scss
+++ b/source/sass/blocks/cloth-selection.scss
@@ -1,80 +1,121 @@
 .cloth-selection__content {
-  @include  desktop-content;
-  margin: 0 auto;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    margin: 0 auto;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+  }
 }
 
 .cloth-selection__heading {
-  margin: 0;
-  margin-bottom: 46px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 22px;
 
-  font-size: 24px;
-  font-weight: normal;
-  line-height: 24px;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 46px;
+
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .cloth-selection__filter {
-  @include list-reset;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 60px;
+  @media (min-width: 760px) {
+    @include list-reset;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
 
-  & li {
-    margin-right: 20px;
-    margin-bottom: 12px;
+    & li {
+      margin-right: 13px;
+      margin-bottom: 9px;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 60px;
+
+    & li {
+      margin-right: 20px;
+      margin-bottom: 12px;
+    }
+
   }
 }
 
 .cloth-selection__filter-button {
-  position: relative;
-  padding: 20px 27px;
-  background: none;
-  border: none;
+  @media (min-width: 760px) {
+    position: relative;
+    padding: 14px 18px;
+    background: none;
+    border: none;
 
-  font-size: 16px;
-  line-height: 16px;
-  text-transform: uppercase;
-  z-index: 1;
-  cursor: pointer;
+    font-size: 11px;
+    line-height: 11px;
+    text-transform: uppercase;
+    z-index: 1;
+    cursor: pointer;
 
-  &:hover,
-  &:focus {
-    color: #0a5a7e;
-    box-shadow:
-      inset 0 0 0 1px #3a748f;
+    &:hover,
+    &:focus {
+      color: #0a5a7e;
+      box-shadow:
+        inset 0 0 0 1px #3a748f;
+
+      &::before {
+        display: block;
+      }
+    }
+
+    &:active {
+      font-weight: bold;
+    }
 
     &::before {
-      display: block;
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 0;
+      display: none;
+      width: 100%;
+      height: 18px;
+      background-color: #ffffff;
+      z-index: -1;
+    }
+
+    &.js-active {
+      color: #0a5a7e;
+      box-shadow:
+        inset 0 0 0 1px #3a748f;
+      font-weight: bold;
+
+      &::before {
+        display: block;
+      }
     }
   }
 
-  &:active {
-    font-weight: bold;
-  }
+  @media (min-width: 1170px) {
+    padding: 20px 27px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 13px;
-    left: 0;
-    display: none;
-    width: 100%;
-    height: 33px;
-    background-color: #ffffff;
-    z-index: -1;
-  }
-
-  &.js-active {
-    color: #0a5a7e;
-    box-shadow:
-      inset 0 0 0 1px #3a748f;
-    font-weight: bold;
+    font-size: 16px;
+    line-height: 16px;
 
     &::before {
-      display: block;
+      top: 13px;
+      height: 33px;
     }
   }
 }
