--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -20,10 +20,14 @@
   font-style: normal;
   @media (min-width: 760px) {
     @include tablet-content;
+    padding-top: 52px;
+    padding-bottom: 61px;
   }
 
   @media (min-width: 1170px) {
     @include desktop-content;
+    padding-top: 52px;
+    padding-bottom: 61px;
   }
 }
 
@@ -35,12 +39,14 @@
   box-shadow: 13px 17px 0 0 rgba(255, 255, 255, 0.4);
 
   @media (min-width: 760px) {
-    padding-top: 45px;
-    width: 492px;
+    margin: 0;
+    padding-top: 26px;
+    width: 290px;
   }
 
   @media (min-width: 1170px) {
-    margin: 0;
+    padding-top: 45px;
+    width: 492px;
   }
 }
 
@@ -54,6 +60,13 @@
   text-align: right;
 
   @media (min-width: 760px) {
+    margin-right: 25px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 44px;
     margin-bottom: 20px;
     font-size: 30px;
@@ -74,6 +87,12 @@
   text-decoration: none;
 
   @media (min-width: 760px) {
+    margin-right: 25px;
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 44px;
     font-size: 30px;
     line-height: 30px;
@@ -98,6 +117,12 @@
   }
 
   @media (min-width: 760px) {
+    padding-top: 34px;
+    padding-left: 41px;
+    width: 290px;
+  }
+
+  @media (min-width: 1170px) {
     padding-top: 55px;
     padding-left: 67px;
     width: 492px;
@@ -121,6 +146,19 @@
   }
 
   @media (min-width: 760px) {
+    margin-bottom: 10px;
+    padding-left: 32px;
+    width: 160px;
+    font-size: 12px;
+    line-height: 18px;
+
+    & svg {
+      width: 17px;
+      height: 23px;
+    }
+  }
+
+  @media (min-width: 1170px) {
     margin-bottom: 12px;
     padding-left: 51px;
     width: 265px;
@@ -161,6 +199,18 @@
   }
 
   @media (min-width: 760px) {
+    margin-bottom: 34px;
+    padding-left: 32px;
+    font-size: 12px;
+    line-height: 18px;
+
+    & svg {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
+  @media (min-width: 1170px) {
     margin-bottom: 62px;
     padding-left: 51px;
     font-size: 20px;
