--- a/source/sass/blocks/footer-categories.scss
+++ b/source/sass/blocks/footer-categories.scss
@@ -25,11 +25,20 @@
 }
 
 .footer-categories__link {
-  display: block;
-  margin-bottom: 37px;
-  font-size: 20px;
-  line-height: 16px;
-  color: #3199c7;
+
+  @media (min-width: 760px) {
+    display: block;
+    margin-bottom: 24px;
+    font-size: 14px;
+    line-height: 11px;
+    color: #3199c7;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 37px;
+    font-size: 20px;
+    line-height: 16px;
+  }
 }
 
 .footer-categories__item {
@@ -48,14 +57,28 @@
 }
 
 .footer-categories__nested-link {
-  font-size: 16px;
-  line-height: 20px;
 
-  &--heading {
-    display: block;
-    text-transform: uppercase;
-    margin-bottom: 18px;
+
+  @media (min-width: 760px) {
+    font-size: 11px;
+    line-height: 11px;
+
+    &--heading {
+      display: block;
+      text-transform: uppercase;
+      margin-bottom: 14px;
+    }
   }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
+    line-height: 20px;
+
+    &--heading {
+      margin-bottom: 18px;
+    }
+  }
+
 }
 
 .footer-categories__deep-list {
@@ -64,6 +87,13 @@
 }
 
 .footer-categories__deep-link {
-  font-size: 16px;
-  line-height: 20px;
+  @media (min-width: 760px) {
+    font-size: 11px;
+    line-height: 11px;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
