--- a/source/sass/blocks/footer-info.scss
+++ b/source/sass/blocks/footer-info.scss
@@ -1,11 +1,12 @@
 .footer-info {
   display: none;
+
   @media (min-width: 760px) {
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-bottom: 42px;
   }
 
   @media (min-width: 1170px) {
@@ -27,7 +28,7 @@
   }
 
   @media (min-width: 760px) {
-    margin-right: auto;
+    margin-right: 74px;
   }
 
   @media (min-width: 1170px) {
@@ -41,14 +42,14 @@
   justify-content: space-between;
   align-items: center;
 
-  width: 96px;
-
   @media (min-width: 760px) {
-    margin-right: auto;
+    margin-right: 52px;
+    width: 64px;
   }
 
   @media (min-width: 1170px) {
     margin-right: 74px;
+    width: 96px;
   }
 
 }
@@ -65,21 +66,42 @@
 }
 
 .footer-info__social-fb {
-  width: 21px;
-  height: 31px;
-  color: #000000;
+  @media (min-width: 760px) {
+    width: 16px;
+    height: 15px;
+    color: #000000;
+  }
+
+  @media (min-width: 1170px) {
+    width: 21px;
+    height: 31px;
+  }
 }
 
 .footer-info__social-vk {
-  width: 28px;
-  height: 26px;
-  color: #000000;
+  @media (min-width: 760px) {
+    width: 26px;
+    height: 17px;
+    color: #000000;
+  }
+
+  @media (min-width: 1170px) {
+    width: 28px;
+    height: 26px;
+  }
 }
 
 .footer-info__social-inst {
-  width: 23px;
-  height: 23px;
-  color: #000000;
+  @media (min-width: 760px) {
+    width: 16px;
+    height: 15px;
+    color: #000000;
+  }
+
+  @media (min-width: 1170px) {
+    width: 23px;
+    height: 23px;
+  }
 }
 
 .footer-info__pay-cards {
@@ -87,33 +109,30 @@
   display: flex;
   justify-content: space-between;
 
-  width: 218px;
-
   @media (min-width: 760px) {
-    margin-right: 0;
+    margin-right: 70px;
+    width: 146px;
   }
 
   @media (min-width: 1170px) {
     margin-right: 118px;
+    width: 218px;
   }
 }
 
 .footer-info__contacts {
-  font-size: 16px;
-  line-height: 18px;
-
   @media (min-width: 760px) {
     display: flex;
-    padding-top: 30px;
-    width: 380px;
+    flex-direction: column;
     justify-content: space-between;
+    margin-left: auto;
+    font-size: 11px;
+    line-height: 12px;
   }
 
   @media (min-width: 1170px) {
-    margin-left: auto;
-    padding-top: 0;
-    width: auto;
-    flex-direction: column;
+    font-size: 16px;
+    line-height: 18px;
   }
 }
 
