--- a/source/sass/blocks/main-info.scss
+++ b/source/sass/blocks/main-info.scss
@@ -19,11 +19,13 @@
   @media (min-width: 760px) {
     @include tablet-content;
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 
   @media (min-width: 1170px) {
     @include desktop-content;
+    padding-bottom: 20px;
   }
 }
 
@@ -59,8 +61,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right: 32px;
+    margin-right: 23px;
     padding-left: 0;
+    width: 114px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 32px;
     width: 180px;
   }
 }
@@ -84,6 +91,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-right: 20px;
+    width: 105px;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 35px;
     width: 150px;
   }
@@ -93,8 +105,12 @@
   color: black;
   text-decoration-color: #d4d4d4;
   @media (min-width: 760px) {
-    font-size: 16px;
+    font-size: 11px;
     text-decoration: none;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 16px;
   }
 }
 
@@ -103,15 +119,30 @@
   @media (min-width: 760px) {
     display: block;
     margin: 0;
+    padding-top: 5px;
+    font-size: 8px;
+  }
+
+  @media (min-width: 1170px) {
+    display: block;
+    margin: 0;
     padding-top: 10px;
+    font-size: 12px;
   }
 }
 
 .main-info__description--city {
-  padding-top: 6px;
-  font-size: 15px;
-  font-weight: bold;
-  letter-spacing: 0.6px;
+  @media (min-width: 760px) {
+    padding-top: 4px;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 0.6px;
+  }
+
+  @media (min-width: 1170px) {
+    padding-top: 6px;
+    font-size: 15px;
+  }
 }
 
 .main-info__different-city {
@@ -119,9 +150,9 @@
   @media (min-width: 760px) {
     display: block;
     margin: 0;
-    padding-top: 7px;
+    padding-top: 4px;
     color: #3199c7;
-    font-size: 15px;
+    font-size: 11px;
 
     &:hover,
     &:focus {
@@ -132,6 +163,11 @@
       opacity: 0.3;
     }
   }
+
+  @media (min-width: 1170px) {
+    padding-top: 7px;
+    font-size: 15px;
+  }
 }
 
 .main-info__address {
@@ -140,12 +176,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 20px;
+    width: 130px;
+    font-size: 10px;
+    line-height: 16px;
+    font-style: normal;
+    text-align: center;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 42px;
     width: 180px;
     font-size: 14px;
     line-height: 24px;
-    font-style: normal;
-    text-align: center;
   }
 }
 
@@ -156,6 +199,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-right: 20px;
+    width: 64px;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 30px;
     width: 93px;
   }
@@ -175,25 +223,54 @@
 }
 
 .main-info__social-link--fb {
-  width: 21px;
-  height: 31px;
+  @media (min-width: 760px) {
+    width: 16px;
+    height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 21px;
+    height: 31px;
+  }
 }
 
 .main-info__social-link--vk {
-  width: 28px;
-  height: 26px;
+  @media (min-width: 760px) {
+    width: 26px;
+    height: 17px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 28px;
+    height: 26px;
+  }
+
 }
 
 .main-info__social-link--inst {
-  width: 23px;
-  height: 23px;
+  @media (min-width: 760px) {
+    width: 16px;
+    height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 23px;
+    height: 23px;
+  }
+
 }
 
 .main-info__order-callback {
   display: none;
-
   @media (min-width: 760px) {
     display: flex;
+    margin-right: 13px;
+    width: 123px;
+    height: 26px;
+    font-size: 10px;
+  }
+
+  @media (min-width: 1170px) {
     margin-right: 23px;
     width: 184px;
     height: 39px;
@@ -205,6 +282,12 @@
   display: none;
   @media (min-width: 760px) {
     display: flex;
+    width: 122px;
+    height: 26px;
+    font-size: 9px;
+  }
+
+  @media (min-width: 1170px) {
     width: 182px;
     height: 39px;
     font-size: 14px;
