--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -22,7 +22,7 @@
   @media (min-width: 760px) {
     @include tablet-content;
     position: static;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
     height: auto;
@@ -30,7 +30,7 @@
 
   @media (min-width: 1170px) {
     @include desktop-content;
-    justify-content: flex-start;
+
     margin-bottom: 10px;
   }
 }
@@ -58,23 +58,28 @@
 
   @media (min-width: 760px) {
     display: block;
+    margin-right: 116px;
     margin-bottom: 20px;
     padding-top: 5px;
-    order: 3;
+    width: 245px;
   }
 
   @media (min-width: 1170px) {
     margin-right: 148px;
     margin-bottom: 0;
-    order: 0;
+    width: auto;
   }
 }
 
 .main-nav__logo-description {
-  margin: 0;
-
-  font-size: 16px;
-  color: #0a5a7e;
+  @media (min-width: 760px) {
+    margin: 0;
+    color: #0a5a7e;
+    font-size: 11px;
+  }
+  @media (min-width: 1170px) {
+    font-size: 16px;
+  }
 }
 
 .main-nav__open-nav {
@@ -140,24 +145,36 @@
   @media (min-width: 760px) {
     position: relative;
     display: block;
-    margin-right: 40px;
-    width: 300px;
+    margin-right: 0px;
+    width: 200px;
     box-shadow: none;
-    order: 1;
     & svg {
       right: 16px;
       bottom: 28px;
-      width: 20px;
-      height: 20px;
+      width: 13px;
+      height: 13px;
+    }
+
+    & button {
+      right: 11px;
+      bottom: 21px;
     }
   }
 
-   @media (min-width: 1170px) {
-     order: 0;
-     & svg {
-       right: 16px;
-       bottom: 15px;
-     }
+  @media (min-width: 1170px) {
+    margin-right: 40px;
+    width: 300px;
+    & svg {
+     right: 16px;
+     bottom: 15px;
+     width: 20px;
+     height: 20px;
+    }
+
+    & button {
+     right: 24px;
+     bottom: 14px;
+    }
   }
 }
 
@@ -202,20 +219,22 @@
   @media (min-width: 760px) {
     margin-top: 13px;
     margin-bottom: 15px;
-    padding-left: 0;
     padding-right: 0;
-    padding-left: 20px;
-    width: 300px;
-    height: 49px;
+    padding-left: 14px;
+    height: 34px;
     background-color: #d2d4e4;
+
+    font-size: 10px;
     font-style: italic;
+    line-height: 11px;
   }
 
   @media (min-width: 1170px) {
     position: relative;
     margin-right: 40px;
     margin-bottom: 0;
-    order: 0;
+    padding-left: 20px;
+    height: 49px;
   }
 }
 
@@ -260,26 +279,34 @@
 
   @media (min-width: 760px) {
     box-sizing: border-box;
-    padding-left: 37px;
-    width: 300px;
-    height: 66px;
+    padding-left: 25px;
+    width: 195px;
+    height: 53px;
     border: 1px solid #3199c7;
     border-top: none;
-    font-size: 16px;
+    font-size: 11px;
     line-height: 11px;
     color: #a0a0a0;
     text-decoration: none;
 
-    order: 2;
-
     & svg {
-      margin-right: 74px;
+      margin-right: 30px;
+      width: 27px;
+      height: 22px;
       color: #3199c7;
     }
   }
 
   @media (min-width: 1170px) {
-    order: 0;
+    padding-left: 37px;
+    width: 300px;
+    height: 66px;
+    font-size: 16px;
+    & svg {
+      margin-right: 74px;
+      width: 31px;
+      height: 27px;
+    }
   }
 }
 
