--- a/source/sass/blocks/nav-categories.scss
+++ b/source/sass/blocks/nav-categories.scss
@@ -8,7 +8,6 @@
   background-color: #ffffff;
   z-index: 2;
 
-
   @media (min-width: 760px) {
     box-sizing: border-box;
     top: calc(100% + 17px);
@@ -18,11 +17,11 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
 
-    width: 735px;
-    min-height: 67px;
+    width: 663px;
+    min-height: 47px;
     background-color: #ffffff;
     box-shadow:
       0 4px 68px 0 rgba(0, 0, 0, 0.2);
@@ -36,6 +35,7 @@
     padding-left: 58px;
     padding-right: 58px;
     width: 954px;
+    min-height: 67px;
   }
 }
 
@@ -95,8 +95,8 @@
     padding-right: 13px;
     padding-left: 0;
     width: auto;
-    height: 67px;
-    font-size: 16px;
+    height: 47px;
+    font-size: 11px;
     font-weight: normal;
     line-height: 16px;
     color: #000000;
@@ -104,7 +104,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: 30px;
+      top: 20px;
       right: 0;
       width: 7px;
       height: 6px;
@@ -120,6 +120,15 @@
 
     &:hover ~ .nav-categories__nested-list {
       display: flex;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    height: 67px;
+    font-size: 16px;
+
+    &::before {
+      top: 30px;
     }
   }
 
@@ -139,7 +148,7 @@
     position: absolute;
     left: -52px;
     top: 100%;
-    padding-top: 27px;
+    padding-top: 10px;
     padding-left: 23px;
     width: 212px;
     background-color: #ffffff;
