--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,66 +1,129 @@
 .news__list {
-  @include desktop-content;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  margin-bottom: 30px;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 32px;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+    margin-bottom: 30px;
+  }
 }
 
 .news__item {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 27px;
-  padding-top: 40px;
-  padding-bottom: 35px;
-  padding-left: 63px;
-  background-color: #ffffff;
-  box-shadow: 0 2px 250px rgba(7, 7, 7, 0.1);
+  @media (min-width: 760px) {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 17px;
+    padding-top: 25px;
+    padding-bottom: 24px;
+    padding-left: 42px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 250px rgba(7, 7, 7, 0.1);
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 27px;
+    padding-top: 40px;
+    padding-bottom: 35px;
+    padding-left: 63px;
+  }
 }
 
 .news__item-heading {
-  margin: 0;
-  margin-bottom: 38px;
-  font-size: 18px;
-  line-height: 26px;
-  color: #0a5a7e;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 26px;
+    font-size: 12px;
+    line-height: 17px;
+    color: #0a5a7e;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 38px;
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
 
 .news__description {
-  margin: 0;
-  margin-bottom: 25px;
-  width: 570px;
-  font-size: 15px;
-  line-height: 26px;
-  letter-spacing: 1px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 17px;
+    width: 384px;
+    font-size: 10px;
+    line-height: 17px;
+    letter-spacing: 1px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 25px;
+    width: 570px;
+    font-size: 15px;
+    line-height: 26px;
+  }
 }
 
 .news__link {
-  width: 274px;
-  height: 53px;
+  @media (min-width: 760px) {
+    width: 185px;
+    height: 36px;
 
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 17px;
-  color: #0a5a7e;
-  letter-spacing: 1px;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 11px;
+    color: #0a5a7e;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 274px;
+    height: 53px;
+
+    font-size: 16px;
+    line-height: 17px;
+  }
 }
 
 .news__image-container {
-  margin-right: 47px;
+  @media (min-width: 760px) {
+    margin-right: 31px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 47px;
+  }
 }
 
 .news__image {
-  margin-bottom: 20px;
-  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.25);
+  @media (min-width: 760px) {
+    margin-bottom: 12px;
+    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.25);
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 20px;
+  }
 }
 
 .news__data {
-  margin: 0;
-  font-size: 13px;
-  line-height: 26px;
-  color: #0a5a7e;
-  text-align: right;
-  text-transform: uppercase;
+  @media (min-width: 760px) {
+    margin: 0;
+    font-size: 9px;
+    line-height: 17px;
+    color: #0a5a7e;
+    text-align: right;
+    text-transform: uppercase;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 13px;
+    line-height: 26px;
+  }
 }
