--- a/source/sass/blocks/product-delivery.scss
+++ b/source/sass/blocks/product-delivery.scss
@@ -8,181 +8,312 @@
 }
 
 .product-delivery__content {
-  @include desktop-content;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  padding-top: 34px;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    padding-top: 23px;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+    padding-top: 34px;
+  }
 }
 
 .product-delivery__buttons {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  margin-bottom: 40px;
-  width: 570px;
+  @media (min-width: 760px) {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-bottom: 27px;
+    width: 380px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 40px;
+    width: 570px;
+  }
 }
 
 .product-delivery__button {
-  position: relative;
-  padding: 21px 36px;
+  @media (min-width: 760px) {
+    position: relative;
+    padding: 15px 24px;
 
-  border: none;
-  background: none;
+    border: none;
+    background: none;
 
-  font-size: 16px;
-  line-height: 17px;
-  text-transform: uppercase;
-  letter-spacing: 4.16px;
-  z-index: 1;
-  cursor: pointer;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 13px;
-    left: 0;
-    display: none;
-    width: 100%;
-    height: 33px;
-    background-color: #ffffff;
-    z-index: -1;
-  }
-
-  &.js-active {
-    color: #0a5a7e;
-    box-shadow:
-      inset 0 0 0 1px #3a748f;
-    font-weight: bold;
+    font-size: 11px;
+    line-height: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    z-index: 1;
+    cursor: pointer;
 
     &::before {
-      display: block;
+      content: "";
+      position: absolute;
+      top: 9px;
+      left: 0;
+      display: none;
+      width: 100%;
+      height: 23px;
+      background-color: #ffffff;
+      z-index: -1;
+    }
+
+    &.js-active {
+      color: #0a5a7e;
+      box-shadow:
+        inset 0 0 0 1px #3a748f;
+      font-weight: bold;
+
+      &::before {
+        display: block;
+      }
+    }
+
+    &:hover,
+    &:focus {
+      color: #0a5a7e;
+    }
+
+    &:active {
+      font-weight: bold;
     }
   }
 
-  &:hover,
-  &:focus {
-    color: #0a5a7e;
-  }
+  @media (min-width: 1170px) {
+    padding: 21px 36px;
 
-  &:active {
-    font-weight: bold;
+    font-size: 16px;
+    line-height: 17px;
+
+    &::before {
+      top: 13px;
+      left: 0;
+      height: 33px;
+    }
   }
 }
 
 .product-delivery__list {
-  @include list-reset;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 55px;
+  @media (min-width: 760px) {
+    @include list-reset;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 36px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 55px;
+  }
 }
 
 .product-delivery__item {
-  position: relative;
-  padding-top: 26px;
-  padding-left: 58px;
+  @media (min-width: 760px) {
+    position: relative;
+    padding-top: 20px;
+    padding-left: 44px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 11px;
-    height: 220px;
-    background-color: #085172;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 8px;
+      height: 147px;
+      background-color: #085172;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 6px;
+      left: 4px;
+      width: 8px;
+      height: 147px;
+      border: 1px solid #085172;
+    }
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 6px;
-    left: 4px;
-    width: 11px;
-    height: 220px;
-    border: 1px solid #085172;
+  @media (min-width: 1170px) {
+    padding-top: 26px;
+    padding-left: 58px;
+
+    &::before {
+      width: 11px;
+      height: 220px;
+    }
+
+    &::after {
+      width: 11px;
+      height: 220px;
+    }
   }
 }
 
 .product-delivery__item-heading {
-  margin: 0;
-  margin-bottom: 16px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 10px;
 
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 18px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+    font-size: 12px;
+    font-weight: normal;
+    line-height: 17px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
 
+  @media (min-width: 1170px) {
+    margin-bottom: 16px;
+
+    font-size: 18px;
+    line-height: 18px;
+    letter-spacing: 1px;
+  }
 }
 
 .product-delivery__nested-list {
-  @include list-reset;
-  margin-bottom: 28px;
-  width: 440px;
+  @media (min-width: 760px) {
+    @include list-reset;
+    margin-bottom: 23px;
+    width: 360px;
 
-  &--pay li {
-    &:nth-child(1)::before {
-      background-image: url("../img/pay-cash.png");
+    &--pay li {
+      &:nth-child(1)::before {
+        background-image: url("../img/pay-cash.png");
+      }
+
+      &:nth-child(2)::before {
+        background-image: url("../img/pay-card.png");
+      }
+
+      &:nth-child(3)::before {
+        background-image: url("../img/pay-account.png");
+      }
+
+      &:nth-child(4)::before {
+        background-image: url("../img/pay-ecoins.png");
+      }
     }
 
-    &:nth-child(2)::before {
-      background-image: url("../img/pay-card.png");
-    }
+    &--del li {
+      padding-left: 46px;
 
-    &:nth-child(3)::before {
-      background-image: url("../img/pay-account.png");
-    }
+      &::before {
+        width: 33px;
+      }
 
-    &:nth-child(4)::before {
-      background-image: url("../img/pay-ecoins.png");
+      &:nth-child(1)::before {
+        background-image: url("../img/del-sdek.png");
+      }
+
+      &:nth-child(2)::before {
+        background-image: url("../img/del-rupost.png");
+      }
+
+      &:nth-child(3)::before {
+        background-image: url("../img/del-ontime.png");
+      }
+
+      &:nth-child(4)::before {
+        background-image: url("../img/del-dpd.png");
+      }
     }
   }
 
-  &--del li {
-    padding-left: 70px;
+  @media (min-width: 1170px) {
+    margin-bottom: 28px;
+    width: 440px;
 
-    &::before {
-      width: 50px;
+    &--pay li {
+      &:nth-child(1)::before {
+        background-image: url("../img/pay-cash.png");
+      }
+
+      &:nth-child(2)::before {
+        background-image: url("../img/pay-card.png");
+      }
+
+      &:nth-child(3)::before {
+        background-image: url("../img/pay-account.png");
+      }
+
+      &:nth-child(4)::before {
+        background-image: url("../img/pay-ecoins.png");
+      }
     }
 
-    &:nth-child(1)::before {
-      background-image: url("../img/del-sdek.png");
-    }
+    &--del li {
+      padding-left: 70px;
 
-    &:nth-child(2)::before {
-      background-image: url("../img/del-rupost.png");
-    }
+      &::before {
+        width: 50px;
+      }
 
-    &:nth-child(3)::before {
-      background-image: url("../img/del-ontime.png");
-    }
+      &:nth-child(1)::before {
+        background-image: url("../img/del-sdek.png");
+      }
 
-    &:nth-child(4)::before {
-      background-image: url("../img/del-dpd.png");
+      &:nth-child(2)::before {
+        background-image: url("../img/del-rupost.png");
+      }
+
+      &:nth-child(3)::before {
+        background-image: url("../img/del-ontime.png");
+      }
+
+      &:nth-child(4)::before {
+        background-image: url("../img/del-dpd.png");
+      }
     }
   }
 }
 
 .product-delivery__nested-item {
-  position: relative;
-  padding-left: 42px;
+  @media (min-width: 760px) {
+    position: relative;
+    padding-left: 27px;
 
-  font-size: 18px;
-  line-height: 18px;
-  letter-spacing: 1px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 1px;
 
-  &:not(:last-child) {
-    margin-bottom: 20px;
+    &:not(:last-child) {
+      margin-bottom: 14px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 15px;
+      height: 22px;
+
+      background-repeat: no-repeat;
+    }
   }
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 24px;
-    height: 24px;
+  @media (min-width: 1170px) {
+    padding-left: 42px;
 
-    background-repeat: no-repeat;
+    font-size: 18px;
+    line-height: 18px;
+    letter-spacing: 1px;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+
+    &::before {
+      top: 0;
+      left: 0;
+      width: 24px;
+      height: 24px;
+    }
   }
 }
