--- a/source/sass/blocks/representatives.scss
+++ b/source/sass/blocks/representatives.scss
@@ -4,15 +4,29 @@
   @media (min-width: 760px) {
     display: block;
   }
+
+  &--tablet-hidden {
+    @media (min-width: 760px) {
+      display: none;
+    }
+
+    @media (min-width: 1170px) {
+      display: block;
+    }
+  }
 }
 
 .representatives__content {
   @media (min-width: 760px) {
+    @include tablet-content;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     margin: 0 auto;
-    @include tablet-content;
+    background-image: url("../img/representatives-map-tablet.png");
+    background-repeat: no-repeat;
+    background-clip: border-box;
+    background-position: right bottom;
   }
 
   @media (min-width: 1170px) {
@@ -20,11 +34,7 @@
     position: relative;
     padding-top: 20px;
     padding-right: 15px;
-    align-items: flex-end;
     background-image: url("../img/representatives-map.png");
-    background-repeat: no-repeat;
-    background-clip: border-box;
-    background-position: right bottom;
 
     &--main {
       @include bg-lines;
@@ -34,51 +44,89 @@
 
 .representatives__heading {
   @include desktop-headings;
-  @media (min-width: 1170px) {
+  @media (min-width: 760px) {
     margin-right: auto;
     text-shadow:
       -10px 10px 0 rgba(40, 80, 169, 0.13);
+    font-size: 32px;
+    line-height: 15px;
   }
+  @media (min-width: 1170px) {
+
+  }
+
 }
 
 .representatives__cards-container {
-  box-sizing: border-box;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-right: 20px;
-  margin-bottom: 45px;
-  padding-left: 36px;
-  width: 550px;
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 2;
+  @media (min-width: 760px) {
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+    margin-bottom: 45px;
+    padding-left: 24px;
+    width: 370px;
+    z-index: 2;
+    background-color: rgba(255, 255, 255, 0.5);
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 17px;
-    left: 20px;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.4);
-    z-index: 0;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 17px;
+      left: 20px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.4);
+      z-index: 0;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    padding-left: 36px;
+    width: 550px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 17px;
+      left: 20px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.4);
+      z-index: 0;
+    }
   }
 }
 
 .representatives__list {
-  @include list-reset;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-right: 36px;
+  @media (min-width: 760px) {
+    @include list-reset;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-right: 24px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: 36px;
+  }
 }
 
 .representatives__link {
-  position: relative;
-  width: 330px;
-  height: 39px;
-  font-size: 14px;
-  z-index: 1;
+  @media (min-width: 760px) {
+    position: relative;
+    width: 222px;
+    height: 27px;
+    font-size: 9px;
+    z-index: 1;
+  }
+
+  @media (min-width: 1170px) {
+    width: 330px;
+    height: 39px;
+    font-size: 14px;
+  }
 }
