--- a/source/sass/blocks/same-products.scss
+++ b/source/sass/blocks/same-products.scss
@@ -9,12 +9,13 @@
 
   @media (min-width: 760px) {
     @include tablet-content;
-    padding-top: 85px;
+    padding-top: 34px;
     padding-bottom: 0;
   }
 
   @media (min-width: 1170px) {
     @include desktop-content;
+    padding-top: 85px;
   }
 }
 
@@ -32,40 +33,36 @@
   letter-spacing: 1.5px;
 
   @media (min-width: 760px) {
-    margin-bottom: 54px;
+    margin-right: auto;
+    margin-bottom: 34px;
     width: auto;
     text-align: left;
-    font-size: 24px;
-    letter-spacing: 2.4px;
+    font-size: 16px;
+    letter-spacing: 2px;
   }
 
   @media (min-width: 1170px) {
-    margin-right: auto;
+    margin-bottom: 54px;
+    text-align: left;
+    font-size: 24px;
+    letter-spacing: 2.4px;
   }
 }
 
 .same-products__list {
   @include list-reset;
+  margin-bottom: 29px;
 
   @media (min-width: 760px) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 735px;
-  }
-
-  @media (min-width: 1170px) {
-    width: 1145px;
-  }
-}
-
-.same-products__item {
-  margin-bottom: 29px;
-
-  @media (min-width: 760px) {
+    margin-bottom: 42px;
+    width: 760px;
   }
 
   @media (min-width: 1170px) {
     margin-bottom: 62px;
+    width: 1145px;
   }
 }
