--- a/source/sass/blocks/schedule-table.scss
+++ b/source/sass/blocks/schedule-table.scss
@@ -1,8 +1,17 @@
 .schedule-table__heading {
-  margin-bottom: 12px;
-  font-size: 24px;
-  line-height: 16px;
-  color: #3199c7;
+  @media (min-width: 760px) {
+    margin-bottom: 7px;
+    font-size: 17px;
+    line-height: 11px;
+    text-align: right;
+    color: #3199c7;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 12px;
+    font-size: 24px;
+    line-height: 16px;
+  }
 }
 
 .schedule-table__body {
@@ -16,7 +25,14 @@
 }
 
 .schedule-table__description {
-  padding-left: 4px;
-  font-size: 18px;
-  line-height: 27px;
+  @media (min-width: 760px) {
+    padding-left: 4px;
+    font-size: 13px;
+    line-height: 19px;
+  }
+
+  @media (min-width: 1170px) {
+    font-size: 18px;
+    line-height: 27px;
+  }
 }
