--- a/source/sass/blocks/select.scss
+++ b/source/sass/blocks/select.scss
@@ -4,4 +4,14 @@
   height: 22px;
   border-color: #3199c7;
   cursor: pointer;
+
+  @media (min-width: 760px) {
+    width: 88px;
+    height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 130px;
+    height: 22px;
+  }
 }
