--- a/source/sass/blocks/text-article.scss
+++ b/source/sass/blocks/text-article.scss
@@ -1,38 +1,75 @@
 .text-article {
-  @include desktop-content;
-  margin: 0 auto;
+  @media (min-width: 760px) {
+    @include tablet-content;
+    margin: 0 auto;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+  }
 }
 
 .text-article__heading {
-  margin: 0;
-  margin-bottom: 50px;
-  padding-top: 25px;
-  font-size: 23px;
-  font-weight: normal;
-  line-height: 16px;
-  color: #0a5a7e;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 32px;
+    padding-top: 12px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 11px;
+    color: #0a5a7e;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 50px;
+    padding-top: 25px;
+    font-size: 23px;
+    font-weight: normal;
+    line-height: 16px;
+    letter-spacing: 3px;
+  }
 }
 
 .text-article__description {
-  margin: 0;
-  margin-bottom: 36px;
+  @media (min-width: 760px) {
+    margin: 0;
+    margin-bottom: 24px;
 
-  font-size: 14px;
-  line-height: 26px;
-  color: #020202;
-  letter-spacing: 1.12px;
+    font-size: 9px;
+    line-height: 17px;
+    color: #020202;
+    letter-spacing: 0.8px;
 
-  &:last-of-type {
-    margin-bottom: 108px;
+    &:last-of-type {
+      margin-bottom: 71px;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 36px;
+
+    font-size: 14px;
+    line-height: 26px;
+    letter-spacing: 1.12px;
+
+    &:last-of-type {
+      margin-bottom: 108px;
+    }
   }
 }
 
 .text-article__images {
-  @include list-reset;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 100px;
+  @media (min-width: 760px) {
+    @include list-reset;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 70px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 100px;
+  }
 }
